k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: fastapi-app
  ports:
    - protocol: TCP
      port: 80        # external port
      targetPort: 8000  # FastAPI app port
  type: ClusterIP   # no NodePort or LoadBalancer, only internal
